--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 </head>
 <body>
 
+    <div class="dark-bg-product-card">
+        
+    </div>
+    
+
     <menu class="burger-menu none">
         <i class="burger-menu__close icon-cross"></i>
         <div class="burger-menu-wrapper">
@@ -133,25 +138,25 @@
             <div class="actual__slider actual-slider swiper centered">
                 <div class="actual-slider-wrapper swiper-wrapper">
                     <!-- 1 -->
-                    <div class="actual-slider__slide actual-card swiper-slide">
+                    <div class="actual-slider__slide actual-card product swiper-slide" data-id="001">
                         <div class="actual-card-flip">
                             <!-- FRONT -->
                             <div class="actual-card-front">
                                 <div class="actual-card__photo">
-                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                    <img class="product-image" src="img/actual-photo2.jpg" alt="actual">
                                 </div>                            
-                                <h3 class="actual-card__name">Костюм Advolatum
+                                <h3 class="actual-card__name product-name">Костюм Advolatum
                                     соцветие</h3>
                                 <div class="actual-card-buy-wrapper">
-                                    <h3 class="actual-card__price">4499 ₴</h3>
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                    <h3 class="actual-card__price product-price">4499 ₴</h3>
+                                    <h3 class="actual-card__buy hover-yellow put-in-cart">В корзину</h3>
                                 </div>
                             </div>
 
                             <!-- BACK -->
                             <div class="actual-card-back">
                                 <div class="actual-card__bg">
-                                    <h3 class="actual-card__name">Костюм Advolatum
+                                    <h3 class="actual-card__name product-name">Костюм Advolatum
                                         соцветие</h3>
                                     <h3 class="actual-card__back-text">Разработан и придуман
                                         с учетом всех
@@ -160,31 +165,31 @@
                                         описывающий конкретную модель</h3>
                                 </div>
                                 <div class="actual-card-back-wrapper">
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                    <h3 class="actual-card__more hover-yellow more">Подробнее...</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- 2 -->
-                    <div class="actual-slider__slide actual-card swiper-slide">
+                    <div class="actual-slider__slide actual-card product swiper-slide" data-id="002">
                         <div class="actual-card-flip">
                             <!-- FRONT -->
                             <div class="actual-card-front">
                                 <div class="actual-card__photo">
-                                    <img src="img/actual-photo1.jpg" alt="actual">
+                                    <img class="product-image" src="img/actual-photo1.jpg" alt="actual">
                                 </div>                            
-                                <h3 class="actual-card__name">Костюм Advolatum
+                                <h3 class="actual-card__name product-name">Костюм Advolatum
                                     радуга</h3>
                                 <div class="actual-card-buy-wrapper">
-                                    <h3 class="actual-card__price">2999 ₴</h3>
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                    <h3 class="actual-card__price product-price">2999 ₴</h3>
+                                    <h3 class="actual-card__buy hover-yellow put-in-cart">В корзину</h3>
                                 </div>
                             </div>
 
                             <!-- BACK -->
                             <div class="actual-card-back">
                                 <div class="actual-card__bg">
-                                    <h3 class="actual-card__name">Костюм Advolatum
+                                    <h3 class="actual-card__name product-name">Костюм Advolatum
                                         радуга</h3>
                                     <h3 class="actual-card__back-text">Разработан и придуман
                                         с учетом всех
@@ -193,31 +198,31 @@
                                         описывающий конкретную модель</h3>
                                 </div>
                                 <div class="actual-card-back-wrapper">
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                    <h3 class="actual-card__more hover-yellow more">Подробнее...</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- 3 -->
-                    <div class="actual-slider__slide actual-card swiper-slide">
+                    <div class="actual-slider__slide actual-card product swiper-slide" data-id="003">
                         <div class="actual-card-flip">
                             <!-- FRONT -->
                             <div class="actual-card-front">
                                 <div class="actual-card__photo">
-                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                    <img class="product-image" src="img/actual-photo3.jpg" alt="actual">
                                 </div>                            
-                                <h3 class="actual-card__name">Штаны Advolatum
+                                <h3 class="actual-card__name product-name">Штаны Advolatum
                                     империум</h3>
                                 <div class="actual-card-buy-wrapper">
-                                    <h3 class="actual-card__price">2499 ₴</h3>
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                    <h3 class="actual-card__price product-price">2499 ₴</h3>
+                                    <h3 class="actual-card__buy hover-yellow put-in-cart">В корзину</h3>
                                 </div>
                             </div>
 
                             <!-- BACK -->
                             <div class="actual-card-back">
                                 <div class="actual-card__bg">
-                                    <h3 class="actual-card__name">Штаны Advolatum
+                                    <h3 class="actual-card__name product-name">Штаны Advolatum
                                         империум</h3>
                                     <h3 class="actual-card__back-text">Разработан и придуман
                                         с учетом всех
@@ -226,31 +231,31 @@
                                         описывающий конкретную модель</h3>
                                 </div>
                                 <div class="actual-card-back-wrapper">
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                    <h3 class="actual-card__more hover-yellow more">Подробнее...</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- 4 -->
-                    <div class="actual-slider__slide actual-card swiper-slide">
+                    <div class="actual-slider__slide actual-card product swiper-slide" data-id="004">
                         <div class="actual-card-flip">
                             <!-- FRONT -->
                             <div class="actual-card-front">
                                 <div class="actual-card__photo">
-                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                    <img class="product-image" src="img/actual-photo1.jpg" alt="actual">
                                 </div>                            
-                                <h3 class="actual-card__name">Чокер Advolatum
+                                <h3 class="actual-card__name product-name">Чокер Advolatum
                                     непокорность</h3>
                                 <div class="actual-card-buy-wrapper">
-                                    <h3 class="actual-card__price">749 ₴</h3>
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                    <h3 class="actual-card__price product-price">749 ₴</h3>
+                                    <h3 class="actual-card__buy hover-yellow put-in-cart">В корзину</h3>
                                 </div>
                             </div>
 
                             <!-- BACK -->
                             <div class="actual-card-back">
                                 <div class="actual-card__bg">
-                                    <h3 class="actual-card__name">Чокер Advolatum
+                                    <h3 class="actual-card__name product-name">Чокер Advolatum
                                         непокорность</h3>
                                     <h3 class="actual-card__back-text">Разработан и придуман
                                         с учетом всех
@@ -259,31 +264,31 @@
                                         описывающий конкретную модель</h3>
                                 </div>
                                 <div class="actual-card-back-wrapper">
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                    <h3 class="actual-card__more hover-yellow more">Подробнее...</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- 5 -->
-                    <div class="actual-slider__slide actual-card swiper-slide">
+                    <div class="actual-slider__slide actual-card product swiper-slide" data-id="005">
                         <div class="actual-card-flip">
                             <!-- FRONT -->
                             <div class="actual-card-front">
                                 <div class="actual-card__photo">
-                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                    <img class="product-image" src="img/actual-photo1.jpg" alt="actual">
                                 </div>                            
-                                <h3 class="actual-card__name">Костюм Advolatum
+                                <h3 class="actual-card__name product-name">Костюм Advolatum
                                     имортал</h3>
                                 <div class="actual-card-buy-wrapper">
-                                    <h3 class="actual-card__price">3799 ₴</h3>
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                    <h3 class="actual-card__price product-price">3799 ₴</h3>
+                                    <h3 class="actual-card__buy hover-yellow put-in-cart">В корзину</h3>
                                 </div>
                             </div>
 
                             <!-- BACK -->
                             <div class="actual-card-back">
                                 <div class="actual-card__bg">
-                                    <h3 class="actual-card__name">Костюм Advolatum
+                                    <h3 class="actual-card__name product-name">Костюм Advolatum
                                         имортал</h3>
                                     <h3 class="actual-card__back-text">Разработан и придуман
                                         с учетом всех
@@ -292,64 +297,31 @@
                                         описывающий конкретную модель</h3>
                                 </div>
                                 <div class="actual-card-back-wrapper">
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                    <h3 class="actual-card__more hover-yellow more">Подробнее...</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- 6 -->
-                    <div class="actual-slider__slide actual-card swiper-slide">
+                    <div class="actual-slider__slide actual-card product swiper-slide" data-id="006">
                         <div class="actual-card-flip">
                             <!-- FRONT -->
                             <div class="actual-card-front">
                                 <div class="actual-card__photo">
-                                    <img src="img/actual-photo2.jpg" alt="actual">
+                                    <img class="product-image" src="img/actual-photo2.jpg" alt="actual">
                                 </div>                            
-                                <h3 class="actual-card__name">Юбка Advolatum
-                                    невинность</h3>
-                                <div class="actual-card-buy-wrapper">
-                                    <h3 class="actual-card__price">1299 ₴</h3>
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
-                                </div>
-                            </div>
-
-                            <!-- BACK -->
-                            <div class="actual-card-back">
-                                <div class="actual-card__bg">
-                                    <h3 class="actual-card__name">Юбка Advolatum
-                                        невинность</h3>
-                                    <h3 class="actual-card__back-text">Разработан и придуман
-                                        с учетом всех
-                                        требований комфорта
-                                        человека в городе подобный текст
-                                        описывающий конкретную модель</h3>
-                                </div>
-                                <div class="actual-card-back-wrapper">
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- 7 -->
-                    <div class="actual-slider__slide actual-card swiper-slide">
-                        <div class="actual-card-flip">
-                            <!-- FRONT -->
-                            <div class="actual-card-front">
-                                <div class="actual-card__photo">
-                                    <img src="img/actual-photo2.jpg" alt="actual">
-                                </div>                            
-                                <h3 class="actual-card__name">Берцы Advolatum
+                                <h3 class="actual-card__name product-name">Берцы Advolatum
                                     панк</h3>
                                 <div class="actual-card-buy-wrapper">
-                                    <h3 class="actual-card__price">4899 ₴</h3>
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__buy">В корзину</h3></a>
+                                    <h3 class="actual-card__price product-price">4899 ₴</h3>
+                                    <h3 class="actual-card__buy hover-yellow put-in-cart">В корзину</h3>
                                 </div>
                             </div>
 
                             <!-- BACK -->
                             <div class="actual-card-back">
                                 <div class="actual-card__bg">
-                                    <h3 class="actual-card__name">Берцы Advolatum
+                                    <h3 class="actual-card__name product-name">Берцы Advolatum
                                         панк</h3>
                                     <h3 class="actual-card__back-text">Разработан и придуман
                                         с учетом всех
@@ -358,12 +330,11 @@
                                         описывающий конкретную модель</h3>
                                 </div>
                                 <div class="actual-card-back-wrapper">
-                                    <a href="#" class="link-reset hover-yellow"><h3 class="actual-card__more">Подробнее...</h3></a>
+                                    <h3 class="actual-card__more hover-yellow more">Подробнее...</h3>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>  
             </div>
             <div class="actual-more-wrapper">
